--- a/products/package.json
+++ b/products/package.json
@@ -16,8 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.3.1",
+    "firebase-admin": "^11.10.1",
     "mongoose": "^7.5.0",
     "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "xss-clean": "^0.1.4"
   }
 }
