--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,9 @@ web_modules/
 .env.production.local
 .env.local
 
+#auth files
+auth.js
+config.json
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
