--- a/.gitignore
+++ b/.gitignore
@@ -80,8 +80,8 @@ web_modules/
 .env.local
 
 #auth files
-auth.js
-config.json
+APIGateway/config/auth.js
+APIGateway/config/config.json
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
