--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,8 @@ web_modules/
 .env.local
 
 #auth files
-config/
+config.json
+firbase.config.js
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
