--- a/products/package.json
+++ b/products/package.json
@@ -12,6 +12,7 @@
   "author": "Pranay E. Salve",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
